--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -42,9 +42,20 @@ jobs:
           echo "$CHANGELOG_CONTENT" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build Shadow JAR
+        run: ./gradlew jvmShadowJar
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           draft: true
           tag_name: ${{ env.TAG_NAME }}
           body: ${{ env.CHANGELOG_CONTENT }}
+          files: |
+            cli/build/libs/composables.jar
